[project]
# Support Python 3.11+.
requires-python = ">=3.11"

[tool.poetry]
name = "ci-cd-learning"
version = "0.1.0"
description = ""
authors = ["phunkault <phunkault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bandit = "1.7.6"
pre-commit = "3.6.0"
ruff = "0.1.13"
pytest = "7.4.4"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
exclude = ["test_*.py"]


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ['.']

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 90
